--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
             <div>curOperation: <span id="curOperation"></span></div>
         </div>
 
-        <script src="./js/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
